# Reinforcement-Learning-Q-Learning-Family-

./: .gitignore  README.md  main.py  pyproject.toml
logs/: events.out.tfevents.1771937511.LAPTOP-3DTEG5F5.4300.0  events.out.tfevents.1771937597.LAPTOP-3DTEG5F5.17668.0  events.out.tfevents.1771990313.LAPTOP-3DTEG5F5.11380.0  events.out.tfevents.1771990327.LAPTOP-3DTEG5F5.13768.0  events.out.tfevents.1771990358.LAPTOP-3DTEG5F5.17436.0
src/back/DQN/PT/: dqn_agent.py  main_dqn.py  utils.py
src/back/DQN/PT/plots/: DQNAgent_PongNoFrameskip-v4_lr0.0001_250games.html
src/back/DQN/TF/: agent.py  main.py  network.py  utils.py
src/back/DQN/TF/plots/: DQNAgent_PongNoFrameskip-v4_lr0.0001_250games.html
src/back/Monte Carlo Methods/: MC_Basic.py
src/back/Value iteration and Policy iteration/: policy_iteration.py  value iteration.py
