[project]
name = "deep-q-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[accept-rom-license,atari]>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
]
